modal dropdownlist content appended to body. CSS changes to made content visible. Related to https://github.com/buefy/buefy/issues/1163

--- a/src/assets/styles/bulma.scss
+++ b/src/assets/styles/bulma.scss
@@ -115,6 +115,10 @@ html {
   font-weight: normal !important;
 }
 
+.modal+.autocomplete.control .dropdown-menu {
+  z-index: 3000 !important;
+}
+
 /* Loading */
 
 .loading-overlay .loading-icon::after {
